# Conways-gameof-life

./: CMakeLists.txt  README.md
Figures/: figure1.txt  figure2.txt  figure3.txt  figure4.txt
src/: cell.cpp  cell.h  center.txt  controller.cpp  controller.h  demonoid.txt  figure1.txt  figure2.txt  figure3.txt  figure5.txt  game.cpp  game.h  grid.cpp  grid.h  main.cpp  renderer.cpp  renderer.h  utils.h
